--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
     "axios": "^1.5.0",
+    "bootstrap": "^5.3.2",
     "cors": "^2.8.5",
     "formik": "^2.4.3",
     "js-cookie": "^3.0.5",
