--- a/client/package.json
+++ b/client/package.json
@@ -21,10 +21,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
-    "react-icons": "^4.10.1",
+    "react-icons": "^4.12.0",
     "react-router-dom": "^6.15.0",
     "recharts": "^2.8.0",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.10.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
